# dm-tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dm-tree-sitter.pc.in
bindings/c/tree_sitter/: tree-sitter-dm-tree-sitter.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dm_tree_sitter/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDmTreeSitterTests/: TreeSitterDmTreeSitterTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
